--- a/sources/wheelie.css
+++ b/sources/wheelie.css
@@ -1,1 +1,7 @@
-
+footer {
+  margin-top: 4em;
+  background: repeat-x center top url(./images/udgs/bike.png);
+  background-size: auto 16px;
+  padding-top: 2em;
+  image-rendering: pixelated;
+}
