--- a/sources/wheelie.css
+++ b/sources/wheelie.css
@@ -1,3 +1,9 @@
+td.comment-2 {
+  background-color: #332211;
+  vertical-align: top;
+  width: 80%;
+}
+
 footer {
   margin-top: 4em;
   background: repeat-x center top url(./images/udgs/bike.png);
